// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrequencySelector Story states (visual + DOM) Monthly selected renders and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Monday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrequencySelector Story states (visual + DOM) Previously saved frequency (same as the current frequency) shows current subscription pill above selected card and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Monday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrequencySelector Story states (visual + DOM) Previously saved frequency (saved monthly, current weekly) shows current subscription pill above monthly card and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Monday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrequencySelector Story states (visual + DOM) Quarterly selected renders and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Monday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrequencySelector Story states (visual + DOM) Weekly selected (default Monday) renders and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Monday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FrequencySelector Story states (visual + DOM) Weekly selected with Sunday start shows "Sent every Sunday" and matches snapshot 1`] = `
<div
  aria-label="Frequency"
  class="googlesitekit-frequency-selector"
  role="radiogroup"
>
  <div
    aria-checked="true"
    class="googlesitekit-frequency-selector__card googlesitekit-frequency-selector__card--selected"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Weekly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 7 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent every Sunday
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Monthly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 28 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each month
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-checked="false"
    class="googlesitekit-frequency-selector__card"
    role="radio"
    tabindex="0"
  >
    <div
      class="googlesitekit-frequency-selector__content"
    >
      <div
        class="googlesitekit-frequency-selector__label"
      >
        <span
          class="googlesitekit-typography googlesitekit-typography--label googlesitekit-typography--large"
        >
          Quarterly
        </span>
      </div>
      <div
        class="googlesitekit-frequency-selector__period-description"
      >
        <div
          class="googlesitekit-frequency-selector__period"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Last 90 days
          </span>
        </div>
        <div
          class="googlesitekit-frequency-selector__description"
        >
          <span
            class="googlesitekit-typography googlesitekit-typography--body googlesitekit-typography--small"
          >
            Sent on the 1st of each quarter
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
